--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
   networks:
   - javawebapp_network
   deploy:
-   mode: replicas
+   mode: replicated-job
    replicas: 2
    update_config: 
     parallelism: 1
